--- a/Engine/ColorVision.Engine/DataHistory/DataSummaryPage.xaml
+++ b/Engine/ColorVision.Engine/DataHistory/DataSummaryPage.xaml
@@ -21,6 +21,7 @@
             </Grid.RowDefinitions>
             <Grid>
                 <DockPanel Margin="5" >
+                    <Button  Content="全部归档" DockPanel.Dock="Right" Click="Save_Click" Margin="10,0"/>
                     <Button  Content="搜索" DockPanel.Dock="Right" Click="Query_Click" Margin="10,0"/>
                     <TextBox x:Name="SearchBox" BorderBrush="{DynamicResource PrimaryBrush}" BorderThickness="0"  VerticalContentAlignment="Center"  VerticalAlignment="Center" Text="" TextChanged="SearchBox_TextChanged"  InputMethod.IsInputMethodEnabled="True"  KeyDown="KeyEnter"  />
                 </DockPanel>
