--- a/Engine/ColorVision.Engine/Templates/Jsons/KB/EditTemplateJson.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/KB/EditTemplateJson.xaml
@@ -20,16 +20,27 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0" Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
+        <Grid Grid.Row="0" Margin="0,0,0,5">
+            <Border Grid.Row="0" Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
 
-        <Border Grid.Row="0" Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
-        <TextBox  Grid.Row="0"  Text="{Binding JsonValue}" TextWrapping="Wrap" Margin="5" Padding="5" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top"/>
-        <StackPanel x:Name="FuncStackPanel"  Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,5,0,0">
+            <Border Grid.Row="0" Background="{DynamicResource  SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" CornerRadius="5"/>
+            <TextBox  Grid.Row="0"  Text="{Binding JsonValue}" TextWrapping="Wrap" Margin="5" Padding="5" AcceptsReturn="True" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top"/>
+        </Grid>
+
+        <StackPanel x:Name="FuncStackPanel"  Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,0,0">
             <TextBlock Text="POI" Width="30"/>
-            <ComboBox  x:Name="ComboxPoiTemplate2"  Width="130" HorizontalAlignment="Left" ItemsSource="{Binding PoiParams}" SelectedIndex="{Binding TemplatePoiSelectedIndex}" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value"  DisplayMemberPath="Key" />
-            <Button Content="生成到Json" Command="{Binding ImportFormPoiCommand}"/>
+            <ComboBox  x:Name="ComboxPoiTemplate2"  Width="130" HorizontalAlignment="Left" ItemsSource="{Binding PoiParams}"  Margin="0,0,5,0" SelectedIndex="{Binding TemplatePoiSelectedIndex}" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value"  DisplayMemberPath="Key" />
+            <Button Command="{Binding OpenTemplatePoiCommand}" Height="20" Width="20" Padding="2" Margin="0,0,5,0">
+                <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="14"  Foreground="{DynamicResource GlobalTextBrush}"/>
+            </Button>
+
+            <Button Command="{Binding EditTemplatePoiCommand}" Height="20" Width="20" Padding="2" Margin="0,0,5,0">
+                <Image Source="{StaticResource  DrawingImageEdit}" Width="12" Margin="0" />
+            </Button>
+
+            <Button Content="生成到Json" Command="{Binding ImportFormPoiCommand}"  Margin="0,0,5,0"/>
             <Button Content="校验Json" Margin="0,0,5,0" />
-            <Button Content="重置" Command="{Binding ResetCommand}" />
+            <Button Content="重置" Command="{Binding ResetCommand}"  Margin="0,0,0,0"/>
         </StackPanel>
         
 
